# Partikel_accelleration_on_GPU

./: .gitignore  CMakeLists.txt  README.md  colorFragmentShader.frag  colorVertexShader.vert  imageLoader.h  io.c  io.h  logic.h  main.c  particles  particlesComputeShader.comp  particlesComputeShader2.comp  types.h  vector.c
src/: CMakeLists.txt  Makefile  colorVertexShader.vert  compile.sh  imageLoader.c  imageLoader.h  io.c  logic.c  logic.h  main.c  scene.c  scene.h  types.h  vector.c  vector.h
